Added the .twitter-share-button class
Added the .twitter-share-button class that styles the tweet button

--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,8 @@ blockquote{
     font-size: 2rem;
   }
 }
+
+.twitter-share-button {
+  background-color: #1b95e0; /*twitter color*/
+  color: #fff;
+}
