Fixed the tweet button. Know it hovers in a better way

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,11 @@ blockquote{
   }
 }
 
-.twitter-share-button {
+.twitter-share-button, .twitter-share-button:visited  {
   background-color: #1b95e0; /*twitter color*/
   color: #fff;
+}
+
+.twitter-share-button:hover{
+  background-color: #1BB4E0;
 }
